--- a/contrib/debian/rules
+++ b/contrib/debian/rules
@@ -5,29 +5,29 @@
 #build/bitcoind::
 #	$(if $(filter nocheck,$(DEB_BUILD_OPTIONS)),,src/test_bitcoin)
 
-DEB_INSTALL_EXAMPLES_hashcoind += debian/examples/*
-DEB_INSTALL_MANPAGES_hashcoind += debian/manpages/*
+DEB_INSTALL_EXAMPLES_electriccoind += debian/examples/*
+DEB_INSTALL_MANPAGES_electriccoind += debian/manpages/*
 
 %:
 	dh --with bash-completion $@
 
 override_dh_auto_build:
-	cd src; $(MAKE) -f makefile.unix hashcoind
+	cd src; $(MAKE) -f makefile.unix electriccoind
 	$(MAKE)
 
 override_dh_auto_clean:
-	if [ -f Makefile ]; then $(MAKE) clean; else rm -rf build/; rm -f hashcoin-qt; fi
+	if [ -f Makefile ]; then $(MAKE) clean; else rm -rf build/; rm -f electriccoin-qt; fi
 	cd src; $(MAKE) -f makefile.unix clean
 
 override_dh_auto_configure:
-	qmake hashcoin-qt.pro USE_QRCODE=1
+	qmake electriccoin-qt.pro USE_QRCODE=1
 
 override_dh_auto_test:
-	cd src; $(MAKE) -f makefile.unix test_hashcoin
-	src/test_hashcoin
+	cd src; $(MAKE) -f makefile.unix test_electriccoin
+	src/test_electriccoin
 
 # Ensure wrapper is set executable
-binary-post-install/hashcoind:
-	chmod +x $(cdbs_curdestdir)usr/bin/hashcoind
-binary-post-install/hashcoin-qt:
-	chmod +x $(cdbs_curdestdir)usr/bin/hashcoin-qt
+binary-post-install/electriccoind:
+	chmod +x $(cdbs_curdestdir)usr/bin/electriccoind
+binary-post-install/electriccoin-qt:
+	chmod +x $(cdbs_curdestdir)usr/bin/electriccoin-qt
