Changed build path

--- a/src/makefile.mingw
+++ b/src/makefile.mingw
@@ -8,14 +8,14 @@ USE_IPV6:=1
 BOOST_SUFFIX?=-mgw46-mt-s-1_54
 
 INCLUDEPATHS= \
- -I"/c/boost_1_54_0" \
- -I"/c/db-4.8.30.NC\build_unix" \
- -I"/c/openssl-1.0.1e\include"
+ -I"\boost_1_54_0" \
+ -I"\db-4.8.30.NC\build_unix" \
+ -I"\openssl-1.0.1e\include"
 
 LIBPATHS= \
- -L"/c/boost_1_54_0\stage\lib" \
- -L"/c/db-4.8.30.NC\build_unix" \
- -L"/c/openssl-1.0.1e"
+ -L"\boost_1_54_0\stage\lib" \
+ -L"\db-4.8.30.NC\build_unix" \
+ -L"\openssl-1.0.1e"
 
 LIBS= \
  -l boost_system-mgw46-mt-s-1_54 \
