--- a/contrib/debian/control
+++ b/contrib/debian/control
@@ -1,4 +1,4 @@
-Source: electriccoin
+Source: soccercoin
 Section: utils
 Priority: optional
 Maintainer: Jonas Smedegaard <dr@jones.dk>
@@ -20,14 +20,14 @@ Build-Depends: debhelper,
  libqrencode-dev
 Standards-Version: 3.9.2
 Homepage: http://www.bitcoin.su/
-Vcs-Git: git://github.com/ElectricCoin/ElectricCoin.git
-Vcs-Browser: http://github.com/ElectricCoin/ElectricCoin
+Vcs-Git: git://github.com/SoccerCoin/SoccerCoin.git
+Vcs-Browser: http://github.com/SoccerCoin/SoccerCoin
 
-Package: electriccoind
+Package: soccercoind
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: peer-to-peer network based digital currency - daemon
- ElectricCoin is a free open source peer-to-peer electronic cash system that
+ SoccerCoin is a free open source peer-to-peer electronic cash system that
  is completely decentralized, without the need for a central server or
  trusted parties.  Users hold the crypto keys to their own money and
  transact directly with each other, with the help of a P2P network to
@@ -38,14 +38,14 @@ Description: peer-to-peer network based digital currency - daemon
  Full transaction history is stored locally at each client.  This
  requires 2+ GB of space, slowly growing.
  .
- This package provides electriccoind, a combined daemon and CLI tool to
+ This package provides soccercoind, a combined daemon and CLI tool to
  interact with the daemon.
 
-Package: electriccoin-qt
+Package: soccercoin-qt
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: peer-to-peer network based digital currency - Qt GUI
- ElectricCoin is a free open source peer-to-peer electronic cash system that
+ SoccerCoin is a free open source peer-to-peer electronic cash system that
  is completely decentralized, without the need for a central server or
  trusted parties.  Users hold the crypto keys to their own money and
  transact directly with each other, with the help of a P2P network to
@@ -56,4 +56,4 @@ Description: peer-to-peer network based digital currency - Qt GUI
  Full transaction history is stored locally at each client.  This
  requires 2+ GB of space, slowly growing.
  .
- This package provides ElectricCoin-Qt, a GUI for ElectricCoin based on Qt.
+ This package provides SoccerCoin-Qt, a GUI for SoccerCoin based on Qt.
