--- a/contrib/debian/electriccoin-qt.desktop
+++ b/contrib/debian/electriccoin-qt.desktop
@@ -1,12 +1,12 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name=ElectricCoin
-Comment=ElectricCoin P2P Cryptocurrency
-Comment[fr]=ElectricCoin, monnaie virtuelle cryptographique pair à pair
-Comment[tr]=ElectricCoin, eşten eşe kriptografik sanal para birimi
-Exec=/usr/bin/electriccoin-qt
+Name=SoccerCoin
+Comment=SoccerCoin P2P Cryptocurrency
+Comment[fr]=SoccerCoin, monnaie virtuelle cryptographique pair à pair
+Comment[tr]=SoccerCoin, eşten eşe kriptografik sanal para birimi
+Exec=/usr/bin/soccercoin-qt
 Terminal=false
 Type=Application
 Icon=/usr/share/pixmaps/bitcoin80.xpm
-MimeType=x-scheme-handler/electriccoin;
+MimeType=x-scheme-handler/soccercoin;
 Categories=Office;
