--- a/contrib/debian/examples/electriccoin.conf
+++ b/contrib/debian/examples/electriccoin.conf
@@ -1,9 +1,9 @@
-# ElectricCoin.conf configuration file. Lines beginning with # are comments.
+# SoccerCoin.conf configuration file. Lines beginning with # are comments.
 
 
 # Network-related settings:
 
-# Run on the test network instead of the real electriccoin network.
+# Run on the test network instead of the real soccercoin network.
 #testnet=1
 
 # Connect via a socks4 proxy
@@ -16,7 +16,7 @@
 # to specific peers:
 #connect=188.120.246.137:7777
 
-# Do not use Internet Relay Chat (irc.lfnet.org #electriccoin channel) to
+# Do not use Internet Relay Chat (irc.lfnet.org #soccercoin channel) to
 # find other peers.
 #noirc=1
 
@@ -26,7 +26,7 @@
 
 # JSON-RPC options (for controlling a running process)
 
-# server=1 tells ElectricCoin to accept JSON-RPC commands.
+# server=1 tells SoccerCoin to accept JSON-RPC commands.
 #server=1
 
 # You must set rpcuser and rpcpassword to secure the JSON-RPC api
@@ -42,12 +42,12 @@
 # Listen for RPC connections on this TCP port:
 rpcport=8332
 
-# You can use ElectricCoin or electriccoind to send commands to Bitcoin/bitcoindElectricCoin/electriccoind
+# You can use SoccerCoin or soccercoind to send commands to Bitcoin/bitcoindSoccerCoin/soccercoind
 # running on another host using this option:
 rpcconnect=127.0.0.1
 
 # Use Secure Sockets Layer (also known as TLS or HTTPS) to communicate
-# with ElectricCoin -server or electriccoind
+# with SoccerCoin -server or soccercoind
 #rpcssl=1
 
 # OpenSSL settings used when rpcssl=1
@@ -58,14 +58,14 @@ rpcsslprivatekeyfile=server.pem
 
 # Miscellaneous options
 
-# Set gen=1 to attempt to generate electriccoins
+# Set gen=1 to attempt to generate soccercoins
 gen=0
 
 # Pre-generate this many public/private key pairs, so wallet backups will be valid for
 # both prior transactions and several dozen future transactions.
 keypool=100
 
-# Pay an optional transaction fee every time you send electriccoins.  
+# Pay an optional transaction fee every time you send soccercoins.  
 paytxfee=0.01
 
 # Allow direct connections for the 'pay via IP address' feature.
@@ -74,7 +74,7 @@ paytxfee=0.01
 
 # User interface options
 
-# Start ElectricCoin minimized
+# Start SoccerCoin minimized
 #min=1
 
 # Minimize to the system tray
