--- a/contrib/debian/rules
+++ b/contrib/debian/rules
@@ -5,29 +5,29 @@
 #build/bitcoind::
 #	$(if $(filter nocheck,$(DEB_BUILD_OPTIONS)),,src/test_bitcoin)
 
-DEB_INSTALL_EXAMPLES_electriccoind += debian/examples/*
-DEB_INSTALL_MANPAGES_electriccoind += debian/manpages/*
+DEB_INSTALL_EXAMPLES_soccercoind += debian/examples/*
+DEB_INSTALL_MANPAGES_soccercoind += debian/manpages/*
 
 %:
 	dh --with bash-completion $@
 
 override_dh_auto_build:
-	cd src; $(MAKE) -f makefile.unix electriccoind
+	cd src; $(MAKE) -f makefile.unix soccercoind
 	$(MAKE)
 
 override_dh_auto_clean:
-	if [ -f Makefile ]; then $(MAKE) clean; else rm -rf build/; rm -f electriccoin-qt; fi
+	if [ -f Makefile ]; then $(MAKE) clean; else rm -rf build/; rm -f soccercoin-qt; fi
 	cd src; $(MAKE) -f makefile.unix clean
 
 override_dh_auto_configure:
-	qmake electriccoin-qt.pro USE_QRCODE=1
+	qmake soccercoin-qt.pro USE_QRCODE=1
 
 override_dh_auto_test:
-	cd src; $(MAKE) -f makefile.unix test_electriccoin
-	src/test_electriccoin
+	cd src; $(MAKE) -f makefile.unix test_soccercoin
+	src/test_soccercoin
 
 # Ensure wrapper is set executable
-binary-post-install/electriccoind:
-	chmod +x $(cdbs_curdestdir)usr/bin/electriccoind
-binary-post-install/electriccoin-qt:
-	chmod +x $(cdbs_curdestdir)usr/bin/electriccoin-qt
+binary-post-install/soccercoind:
+	chmod +x $(cdbs_curdestdir)usr/bin/soccercoind
+binary-post-install/soccercoin-qt:
+	chmod +x $(cdbs_curdestdir)usr/bin/soccercoin-qt
